--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "equibop",
-    "version": "2.1.1",
+    "name": "skibiditop",
+    "version": "0.0.1",
     "private": true,
-    "description": "A fork of Vesktop pre-packaged with Equicord",
+    "description": "A fork of Equibop pre-packaged with Equicord",
     "keywords": [],
-    "homepage": "https://github.com/Equicord/Equibop",
+    "homepage": "https://github.com/PaperTobi/skibiditop",
     "license": "GPL-3.0",
-    "author": "Equicord",
+    "author": "PaperTobi",
     "main": "dist/js/main.js",
     "scripts": {
         "build": "tsx scripts/build/build.mts",
@@ -63,9 +63,9 @@
         "pnpm": ">=8"
     },
     "build": {
-        "appId": "io.github.equicord.equibop",
+        "appId": "io.github.papertobi.skibiditop",
         "artifactName": "${productName}-${os}-${arch}.${ext}",
-        "productName": "Equibop",
+        "productName": "Skibiditop",
         "files": [
             "!*",
             "!node_modules",
@@ -78,7 +78,7 @@
         "linux": {
             "icon": "build/icon.icns",
             "category": "Network",
-            "maintainer": "no-reply@thororen.com",
+            "maintainer": "contact-papertobi@proton.me",
             "target": [
                 {
                     "target": "deb",
@@ -110,11 +110,11 @@
                 }
             ],
             "desktop": {
-                "Name": "Equibop",
+                "Name": "Skibiditop",
                 "GenericName": "Internet Messenger",
                 "Type": "Application",
                 "Categories": "Network;InstantMessaging;Chat;",
-                "Keywords": "discord;equibop;vesktop;vencord;equicord;electron;chat;"
+                "Keywords": "discord;Skibiditop;vesktop;vencord;equicord;electron;chat;"
             }
         },
         "mac": {
@@ -129,8 +129,8 @@
             "category": "public.app-category.social-networking",
             "darkModeSupport": true,
             "extendInfo": {
-                "NSMicrophoneUsageDescription": "This app needs access to the microphone",
-                "NSCameraUsageDescription": "This app needs access to the camera",
+                "NSMicrophoneUsageDescription": "This app needs skibidi access to the microphone",
+                "NSCameraUsageDescription": "This app needs skibidi access to the camera",
                 "com.apple.security.device.audio-input": true,
                 "com.apple.security.device.camera": true
             }
