--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
                 "GenericName": "Internet Messenger",
                 "Type": "Application",
                 "Categories": "Network;InstantMessaging;Chat;",
-                "Keywords": "discord;Skibiditop;vesktop;vencord;equicord;electron;chat;"
+                "Keywords": "discord;skibiditop;vesktop;vencord;equicord;electron;chat;"
             }
         },
         "mac": {
