--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
 
         strategy:
             matrix:
-                os: [ubuntu-latest, windows-latest]
+                os: [macos-latest, ubuntu-latest, windows-latest]
                 include:
                     - os: ubuntu-latest
                       platform: linux
@@ -36,6 +36,14 @@ jobs:
               run: pnpm build
 
             - name: Run Electron Builder
+              if: ${{ matrix.platform != 'mac' }}
+              run: |
+                  pnpm electron-builder --${{ matrix.platform }} --publish always
+              env:
+                  GH_TOKEN: ${{ secrets.ETOKEN }}
+
+            - name: Run Electron Builder
+              if: ${{ matrix.platform == 'mac' }}
               run: |
                   pnpm electron-builder --${{ matrix.platform }} --publish always
               env:
